update styles for expanded footer on map page

--- a/app/styles/components/shared/c-container-footer.scss
+++ b/app/styles/components/shared/c-container-footer.scss
@@ -5,6 +5,7 @@
   .footer-expanded {
     -webkit-overflow-scrolling: touch;
     bottom: 68px;
+    max-height: calc(100% - 68px - 95px);
     overflow: auto;
     position: absolute;
     width: 100%;
