fix slider on home page

--- a/app/styles/components/c-cover-page.scss
+++ b/app/styles/components/c-cover-page.scss
@@ -67,6 +67,10 @@
       font-size: $font-size-huge;
       letter-spacing: -1.5px;
       line-height: .85;
+      padding-top: 120px;
+    }
+
+    @media #{$mq-laptop} {
       padding-top: 170px;
     }
 
@@ -103,6 +107,10 @@
 
     @media #{$mq-tablet} {
       padding-top: 170px;
+    }
+
+    @media #{$mq-laptop} {
+      padding-top: 120px;
     }
 
     .contain-quote-text {
