update images and styles for research and partner pages

--- a/app/styles/layout/l-static-page.scss
+++ b/app/styles/layout/l-static-page.scss
@@ -132,6 +132,10 @@
     .section-item {
       margin: 60px 0 55px;
 
+      img {
+        max-width: 200px;
+      }
+
       &:last-child {
         margin-bottom: 0;
       }
