fix responsive styles small footer

--- a/app/styles/components/shared/c-footer-mini.scss
+++ b/app/styles/components/shared/c-footer-mini.scss
@@ -11,7 +11,7 @@
   .contain-partners {
     align-items: center;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     width: 100%;
 
     @media screen and (min-width: 900px) {
