--- a/app/styles/components/shared/c-container-footer.scss
+++ b/app/styles/components/shared/c-container-footer.scss
@@ -20,7 +20,8 @@
     background-color: $color-13;
     display: flex;
     height: 30px;
-    justify-content: space-around;
+    justify-content: space-between;
+    padding: 0 20px;
 
     @media screen and (min-width: 900px) {
       display: none;
