--- a/app/styles/components/shared/c-modal.scss
+++ b/app/styles/components/shared/c-modal.scss
@@ -13,15 +13,9 @@
   z-index: 1000;
 
   > .content {
-    -webkit-overflow-scrolling: touch;
-    background-color: $color-2;
-    border: 1px solid rgba($color-3, .3);
-    color: $color-4;
-    max-height: calc(100% - 60px);
-    overflow-y: auto;
-    padding: 40px;
+    height: auto;
     position: relative;
-    width: calc(100% - 60px);
+    width: calc(100 - 60px);
 
     @media #{$mq-mobile-large} {
       max-width: 860px;
@@ -35,6 +29,17 @@
     @media #{$mq-laptop} {
       width: 860px;
     }
+
+    .contain-content {
+      -webkit-overflow-scrolling: touch;
+      background-color: $color-2;
+      border: 1px solid rgba($color-3, .3);
+      color: $color-4;
+      max-height: calc(100vh - 60px);
+      overflow-x: hidden;
+      overflow-y: auto;
+      padding: 40px;
+    }
   }
 
   .close-button {
@@ -42,8 +47,8 @@
     border: 0;
     border-radius: 100%;
     height: 40px;
+    left: -40px;
     position: absolute;
-    right: 0;
     top: 20px;
     transform: translateX(50%);
     width: 40px;
