--- a/app/styles/components/c-button.scss
+++ b/app/styles/components/c-button.scss
@@ -3,17 +3,23 @@
 .c-btn-primary {
   align-items: center;
   background-color: $color-3;
+  border: 0;
   color: $color-4;
   display: flex;
+  font-family: $font-family-1;
   font-size: $font-size-small;
+  font-weight: $font-weight-bold;
   height: 40px;
   justify-content: center;
   letter-spacing: -.1px;
   line-height: .4;
-  max-width: 180px;
   min-height: 50px;
   padding: 15px 40px;
   text-decoration: none;
+
+  @media #{$mq-tablet} {
+    max-width: 180px;
+  }
 
   img {
     margin-left: -5px;
