update images and styles

--- a/app/styles/layout/l-static-page.scss
+++ b/app/styles/layout/l-static-page.scss
@@ -134,6 +134,10 @@
 
       img {
         max-width: 200px;
+
+        &.-small {
+          max-width: 90px;
+        }
       }
 
       &:last-child {
