--- a/app/styles/components/shared/c-modal.scss
+++ b/app/styles/components/shared/c-modal.scss
@@ -47,11 +47,16 @@
     border: 0;
     border-radius: 100%;
     height: 40px;
-    left: -40px;
+    left: -15px;
     position: absolute;
-    top: 20px;
+    top: 5px;
     transform: translateX(50%);
     width: 40px;
+
+    @media screen and (min-width: 500px) {
+      left: -40px;
+      top: 20px;
+    }
 
     > .icon {
       display: block;
