--- a/app/styles/components/shared/c-modal.scss
+++ b/app/styles/components/shared/c-modal.scss
@@ -49,15 +49,15 @@
     border: 0;
     border-radius: 100%;
     height: 40px;
-    left: -15px;
+    left: 10px;
     position: absolute;
-    top: 5px;
-    transform: translateX(50%);
+    top: 10px;
     width: 40px;
 
     @media screen and (min-width: 550px) {
-      left: -40px;
+      left: 0;
       top: 20px;
+      transform: translateX(-50%);
     }
 
     > .icon {
