fix slider for small devices

--- a/app/styles/components/c-cover-page.scss
+++ b/app/styles/components/c-cover-page.scss
@@ -107,14 +107,15 @@
 
   //Cover different with quote and different kind of text
   .leo-slider {
+    min-height: 500px;
     padding-top: 25px;
 
     @media #{$mq-tablet} {
-      padding-top: 170px;
+      padding-top: 120px;
     }
 
     @media #{$mq-laptop} {
-      padding-top: 120px;
+      padding-top: 170px;
     }
 
     .contain-quote-text {
