--- a/app/styles/components/c-footer.scss
+++ b/app/styles/components/c-footer.scss
@@ -51,7 +51,7 @@
         display: block;
         font-size: $font-size-normal;
         margin-bottom: 15px;
-        margin-top: 45px;
+        margin-top: 0;
 
         @media screen and (min-width: 845px) {
           display: none;
@@ -87,13 +87,26 @@
             top: 12px;
           }
         }
+
+        &.-funding-logo {
+          border-top: 1px solid $color-4;
+          margin-top: 25px;
+          max-width: 200px;
+          padding-top: 20px;
+
+          @media screen and (min-width: 845px) {
+            border-top: 0;
+            margin-top: 0;
+            max-width: none;
+            padding-top: 0;
+          }
+        }
       }
 
       .logo-item > .logo {
         display: block;
         max-width: 130px;
         width: 100%;
-
 
         &.-oceana {
           max-width: 130px;
