update slider for mobiles

--- a/app/styles/components/c-cover-page.scss
+++ b/app/styles/components/c-cover-page.scss
@@ -107,8 +107,12 @@
 
   //Cover different with quote and different kind of text
   .leo-slider {
-    min-height: 500px;
     padding-top: 25px;
+
+    @media #{$mq-mobile-large} {
+      min-height: 500px;
+      padding-top: 120px;
+    }
 
     @media #{$mq-tablet} {
       padding-top: 120px;
