--- a/app/styles/components/c-contact.scss
+++ b/app/styles/components/c-contact.scss
@@ -1,4 +1,4 @@
-@import '../settings';
+@import '../base';
 
 .c-contact {
   background: url('../../assets/images/contact_us.jpg') no-repeat center;
@@ -47,6 +47,30 @@
         font-size: $font-size-x-medium;
         text-align: center;
       }
+    }
+  }
+
+  .emails-text {
+    color: $color-4;
+    font-family: $font-family-2;
+    font-size: $font-size-x-normal;
+
+    &:first-of-type {
+      margin-bottom: 20px;
+      margin-top: 50px;
+    }
+
+    ul {
+      li {
+        font-size: $font-size-normal;
+        line-height: 2;
+      }
+    }
+
+    a {
+      color: $color-4;
+      font-size: $font-size-normal;
+      font-weight: $font-weight-bold;
     }
   }
 }
