fix slider error o firefox

--- a/app/styles/components/c-research-section.scss
+++ b/app/styles/components/c-research-section.scss
@@ -76,6 +76,7 @@
   }
 
   :global .slick-next {
+    min-width: 20px;
 
     &::before {
       transform: rotate(-135deg);
@@ -83,6 +84,7 @@
   }
 
   :global .slick-prev {
+    min-width: 20px;
 
     &::before {
       transform: rotate(45deg);
