Fix/slider partner page ff (#291)
* fix slider error o firefox

* fix arrow error on FF

--- a/app/styles/components/c-research-section.scss
+++ b/app/styles/components/c-research-section.scss
@@ -76,13 +76,16 @@
   }
 
   :global .slick-next {
+    min-width: 20px;
 
     &::before {
+      right: 5px;
       transform: rotate(-135deg);
     }
   }
 
   :global .slick-prev {
+    min-width: 20px;
 
     &::before {
       transform: rotate(45deg);
