--- a/app/styles/components/c-footer.scss
+++ b/app/styles/components/c-footer.scss
@@ -12,7 +12,7 @@
 
     @media #{$mq-mobile-large} {
       justify-content: space-between;
-      padding: 0 0 50px;
+      padding: 0 0 30px;
     }
 
     @media screen and (min-width: 845px) {
@@ -89,10 +89,10 @@
         }
 
         &.-funding-logo {
-          border-top: 1px solid $color-4;
-          margin-top: 25px;
-          max-width: 200px;
-          padding-top: 20px;
+          border-top: 1px solid rgba($color-4, .2);
+          margin-top: 30px;
+          max-width: 100%;
+          padding-top: 30px;
 
           @media screen and (min-width: 845px) {
             border-top: 0;
