--- a/app/styles/components/shared/c-modal.scss
+++ b/app/styles/components/shared/c-modal.scss
@@ -13,10 +13,13 @@
   z-index: 1000;
 
   > .content {
-    height: auto;
+    height: 100%;
     margin-left: 10px;
+    max-height: calc(100% - 60px);
     position: relative;
-    width: calc(100 - 60px);
+    width: calc(100% - 60px);
+    display: flex;
+    align-items: center;
 
     @media #{$mq-mobile-large} {
       max-width: 860px;
@@ -36,11 +39,11 @@
       background-color: $color-2;
       border: 1px solid rgba($color-3, .3);
       color: $color-4;
-      max-height: calc(100vh - 60px);
       overflow-x: hidden;
       overflow-y: auto;
       padding: 40px;
       width: calc(100% - 10px);
+      max-height: 100%;
     }
   }
 
@@ -53,6 +56,7 @@
     position: absolute;
     top: 10px;
     width: 40px;
+    z-index: 1;
 
     @media screen and (min-width: 550px) {
       left: 0;
