--- a/app/styles/components/shared/c-content-accordion.scss
+++ b/app/styles/components/shared/c-content-accordion.scss
@@ -54,11 +54,11 @@
   }
 
   > .accordion-item .item-content {
-    max-height: 0;
     overflow: hidden;
-    transition: max-height .5s;
+    transition: margin-top 750ms, max-height 750ms;
+
     @media #{$mq-tablet} {
-      transition: max-height 1s;
+      transition: margin-top 500ms, max-height 500ms;
     }
 
     ul {
@@ -68,12 +68,11 @@
   }
 
   > .accordion-item .-opened {
-    max-height: 3000px;
-    transition: max-height 1s;
-    transition-delay: 2s;
+    margin-top: 20px;
+    transition: margin-top 1s, max-height 1s;
 
     @media #{$mq-tablet} {
-      transition: max-height 1.5s;
+      transition: margin-top 750ms, max-height 750ms;
 
     }
   }
