--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -3,6 +3,8 @@
 * {
   -webkit-font-smoothing: antialiased;
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 
   &::after {
     -moz-osx-font-smoothing: grayscale;
