--- a/app/styles/components/c-contact.scss
+++ b/app/styles/components/c-contact.scss
@@ -52,8 +52,9 @@
 
   .emails-text {
     color: $color-4;
-    font-family: $font-family-2;
-    font-size: $font-size-x-normal;
+    font-family: $font-family-1;
+    font-size: $font-size-small;
+    line-height: 2;
 
     &:first-of-type {
       margin-bottom: 20px;
@@ -62,14 +63,15 @@
 
     ul {
       li {
-        font-size: $font-size-normal;
-        line-height: 2;
+        font-size: $font-size-small;
+
       }
     }
 
     a {
+      border-bottom: 1px solid $color-6;
       color: $color-4;
-      font-size: $font-size-normal;
+      font-size: $font-size-small;
       font-weight: $font-weight-bold;
     }
   }
