balance width skytruth logo on small footer

--- a/app/styles/components/shared/c-footer-mini.scss
+++ b/app/styles/components/shared/c-footer-mini.scss
@@ -27,6 +27,10 @@
       @media screen and (min-width: 900px) {
         margin-right: 15px;
       }
+
+      &.-skytruth-logo {
+        max-width: 120px;
+      }
     }
 
     .oceana {
