--- a/app/styles/layout/l-static-page.scss
+++ b/app/styles/layout/l-static-page.scss
@@ -63,6 +63,14 @@
 
   .testimonial > .video-quote {
     margin: 30px 0 35px;
+    i {
+      display: block;
+      margin-bottom: 10px;
+    }
+
+    span {
+
+    }
   }
 
   &.-faq {
