add cursor pointer to buttons on slider

--- a/app/styles/components/c-cover-page.scss
+++ b/app/styles/components/c-cover-page.scss
@@ -274,6 +274,7 @@
       button {
         background: $color-4;
         border: 0;
+        cursor: pointer;
         font-size: 0;
         height: 5px;
         margin-right: 10px;
