--- a/app/styles/components/shared/c-modal.scss
+++ b/app/styles/components/shared/c-modal.scss
@@ -59,6 +59,7 @@
     background-color: $color-4;
     border: 0;
     border-radius: 100%;
+    cursor: pointer;
     height: 40px;
     left: 10px;
     position: absolute;
