fix styles for message after contact page

--- a/app/styles/components/c-contact-form.scss
+++ b/app/styles/components/c-contact-form.scss
@@ -16,8 +16,14 @@
   &.message-after {
     left: 50%;
     position: absolute;
+    text-align: center;
     top: 50%;
     transform: translate(-50%, -50%);
+
+    h1 {
+      color: $color-4;
+      font-size: $font-size-xxx-big;
+    }
   }
 
   label,
