--- a/app/styles/components/c-button.scss
+++ b/app/styles/components/c-button.scss
@@ -4,6 +4,7 @@
   align-items: center;
   background-color: $color-3;
   color: $color-4;
+  cursor: pointer;
   display: flex;
   font-size: $font-size-small;
   height: 40px;
@@ -27,6 +28,7 @@
   border: 0;
   border-radius: 0;
   color: $color-4;
+  cursor: pointer;
   display: block;
   font-size: $font-size-normal;
   margin: 30px auto 0;
