update styles for invalid support modal

--- a/app/styles/components/c-contact-form.scss
+++ b/app/styles/components/c-contact-form.scss
@@ -7,6 +7,26 @@
   width: 100%;
   z-index: 1;
 
+  &.validated {
+    input {
+      &:invalid {
+        border: 1px solid $color-6;
+      }
+    }
+
+    textarea {
+      &:invalid {
+        border: 1px solid $color-6;
+      }
+    }
+
+    select {
+      &:invalid {
+        border: 1px solid $color-6;
+      }
+    }
+  }
+
   @media #{$mq-tablet} {
     margin: 35px auto 0;
     max-width: 480px;
@@ -130,11 +150,5 @@
   :-ms-input-placeholder {
     color: $color-5;
     font-size: $font-size-small;
-  }
-
-  &.validated {
-    input:invalid, textarea:invalid, select:invalid {
-      border: 1px solid $color-6;
-    }
   }
 }
