fix select styles

--- a/app/styles/components/c-support-form.scss
+++ b/app/styles/components/c-support-form.scss
@@ -196,9 +196,11 @@
         }
       }
 
-      select {
-        &:invalid {
-          border: 1px solid $color-6;
+      .select-container {
+        select {
+          &:invalid {
+            border: 1px solid $color-6;
+          }
         }
       }
     }
