--- a/app/styles/components/shared/c-container-footer.scss
+++ b/app/styles/components/shared/c-container-footer.scss
@@ -45,48 +45,37 @@
     }
 
     ul {
-      align-items: center;
-      display: flex;
-      height: 20px;
-      justify-content: space-between;
       list-style: none;
+      margin: 0;
+      padding: 0;
 
-      .cartodb {
-        left: 18px;
-        margin-bottom: 12px;
-        position: relative;
-
-        @media screen and (min-width: 380px) {
-          left: 0;
-          margin-bottom: 0;
-          position: inherit;
-        }
-      }
-
-      .other-attributions {
-        position: relative;
-        right: 20px;
-        text-indent: 40px;
-
-        @media screen and (min-width: 380px) {
-          position: inherit;
-          right: 0;
-          text-indent: 0;
-        }
-      }
-
-      div {
+      @media screen and (min-width: 350px) {
+        align-items: center;
         display: flex;
+        height: 20px;
+        justify-content: space-between;
+      }
 
-        li {
-          color: $color-4;
-          display: inline-block;
-          font-size: $font-size-tiny;
+      li {
+        color: $color-4;
+        display: inline;
+        font-size: $font-size-tiny;
 
-          a {
-            color: $color-4;
-            font-size: $font-size-tiny;
+        &:first-of-type {
+
+          &::after {
+            content: ' ';
+            display: inline;
+
+            @media screen and (min-width: 350px) {
+              display: none;
+            }
           }
+        }
+
+        a {
+          color: $color-4;
+          font-size: $font-size-tiny;
         }
       }
     }
