fix firefox styles and logic on contact page

--- a/app/styles/components/c-contact-form.scss
+++ b/app/styles/components/c-contact-form.scss
@@ -128,6 +128,8 @@
     background-color: $color-4;
     border: solid 1px $color-10;
     border-radius: 0;
+    font-family: $font-family-1;
+    font-size: $font-size-small;
     height: 200px;
     outline: 0;
     padding: 10px;
