--- a/app/styles/components/c-support-form.scss
+++ b/app/styles/components/c-support-form.scss
@@ -140,6 +140,7 @@
           border-radius: 0;
           color: $color-4;
           display: block;
+          font-family: $font-family-1;
           font-size: $font-size-small;
           min-height: 245px;
           outline: 0;
