--- a/app/styles/components/c-partner-section.scss
+++ b/app/styles/components/c-partner-section.scss
@@ -46,7 +46,8 @@
       width: 100%;
 
       &.-skytruth-logo {
-        max-width: 280px;
+        max-width: 230px;
+        width: 100%;
       }
     }
   }
