--- a/app/styles/components/shared/c-header.scss
+++ b/app/styles/components/shared/c-header.scss
@@ -218,4 +218,13 @@
       }
     }
   }
+
+  .login-link {
+    max-width: 80px;
+    overflow: hidden;
+    position: relative;
+    text-overflow: ellipsis;
+    top: 4px;
+    white-space: nowrap;
+  }
 }
