Improve font redering on FF

--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -2,6 +2,7 @@
 
 * {
   -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
