--- a/app/styles/components/shared/c-modal.scss
+++ b/app/styles/components/shared/c-modal.scss
@@ -1,11 +1,8 @@
 @import '../../settings';
 
 .c-modal {
-  align-items: center;
   background-color: rgba($color-1, .7);
-  display: flex;
   height: 100%;
-  justify-content: center;
   left: 0;
   position: fixed;
   top: 0;
@@ -13,12 +10,12 @@
   z-index: 1000;
 
   > .content {
-    align-items: center;
-    display: flex;
-    height: 100%;
-    margin-left: 10px;
-    max-height: calc(100% - 60px);
-    position: relative;
+    height: auto;
+    left: 50%;
+    max-height: 520px;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
     width: calc(100% - 60px);
 
     @media #{$mq-mobile-large} {
