--- a/app/styles/components/homepage/c-steps.scss
+++ b/app/styles/components/homepage/c-steps.scss
@@ -29,7 +29,7 @@
     width: 100%;
 
     @media #{$mq-tablet} {
-      width: calc(100% / 3);
+      width: calc(33.33% - 10px);
     }
 
     & + .step {
