--- a/app/styles/components/shared/c-modal.scss
+++ b/app/styles/components/shared/c-modal.scss
@@ -12,7 +12,7 @@
   > .content {
     height: auto;
     left: 50%;
-    max-height: 520px;
+    min-height: 100px;
     position: absolute;
     top: 50%;
     transform: translate(-50%, -50%);
@@ -36,7 +36,7 @@
       background-color: $color-2;
       border: 1px solid rgba($color-3, .3);
       color: $color-4;
-      max-height: 100%;
+      max-height: 520px;
       overflow-x: hidden;
       overflow-y: auto;
       width: calc(100% - 10px);
