--- a/app/styles/components/shared/c-modal.scss
+++ b/app/styles/components/shared/c-modal.scss
@@ -12,6 +12,7 @@
   > .content {
     height: auto;
     left: 50%;
+    max-height: 100%;
     min-height: 100px;
     position: absolute;
     top: 50%;
